Removed hyperskill lessons for production build